# TianWanAI

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  ALERT_SETUP.md  DATASET_README.md  Dockerfile  Dockerfile.dev  Dockerfile_Actions  Dockerfile_App  Dockerfile_CUDA_10_2  Dockerfile_CUDA_11_1_1  Dockerfile_CUDA_12_6_0  Dockerfile_CUDA_12_6_3  Dockerfile_CUDA_12_6_3_optimized  Dockerfile_Ultralytics  FALL_DETECTION_INTEGRATION.md  README.md  README_Actions_Dockerfiles.md  api.md  api.py  build.bat  build_local.ps1  build_local.sh  build_optimized.ps1  build_optimized.sh  fall_detection_temporal.py  grpc_server.py  main.py  main_grpc.py  pyvenv.cfg  requirements.txt  requirements_fall_detection.txt  run.bash  shared_state.py  test_output_access.html  train.py  train.yaml  tshirt_main.py  unified_dataset_tool.spec
alert-server/: .gitignore  README.md  go.mod  main.go
cam-stream/: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.debian  README.md  README.txt  async_logger.go  build.bat  camera_management.html  config.example.json  config.go  config.json  datastore_lock.go  draw.go  fall_detection.go  ffmpeg_manager.go  ffmpeg_proxy.go  go.mod  go.sum  image_viewer.html  index.html  inference.go  main.go  resolution_detector_linux.go  resolution_detector_windows.go  rtsp.go  rtsp_ffmpeg_cmd.go  rtsp_manager.go  run.ps1  start-rtsp.bat  start.bat  start.sh  stream_detector_cgo.go  webserver.go
cam-stream/stream_detector/: CMakeLists.txt  README.md  build.sh  main.cpp  main_debug.cpp
docs/: README.md  model_type.md  operate_manual.md  quick-build-guide.md
mediamtx/: start-rtsp.bat
opencv-test/: go.mod  main.go
proto/: buf.gen.yaml  buf.yaml
test/: README.md  extract_time_frames.py  extract_upper_body_time_range.py  image_classifier_test.py  video_classifier_test.py
tianwan-tools/: README.md  package-lock.json  (+1 more)
tools/unified_tool_app/: Cargo.toml  README.md  build.ps1  dev.ps1  tauri.conf.json
tools/unified_tool_app/src/: commands.rs  dataset.rs  format_converter.rs  main.rs  utils.rs  video_processor.rs
(+97 files in other folders)
