[package]
name = "unified-tool-app"
version = "0.1.0"
description = "unified dataset management, format conversion, and video processing tool"
authors = ["azusaing"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# file operations
walkdir = "2.4"
glob = "0.3"

# image processing (minimal features to avoid linking issues)
image = { version = "0.24", features = ["png", "jpeg"] }

# data structures
indexmap = "2.0"

# logging
log = "0.4"
env_logger = "0.10"

# path handling
pathdiff = "0.2"

# xml parsing (for VOC format)
roxmltree = "0.19"

# yaml support
serde_yaml = "0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "unified-tool-app"
path = "src/main.rs"
